--- a/index.html
+++ b/index.html
@@ -5,13 +5,129 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>new repo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="icon/shape-9.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>Help people</title>
 </head>
 
 <body>
-    <h1>jamil hasan</h1>
-    <h2>jamil hasan</h2>
-    <h3>jamil hasan</h3>
+    <header>
+        <div class="banner">
+            <div>
+                <h1>Let's help those who are <br> more in need</h1>
+                <p>We believe in the power of prayer and have provided prayers, inspiration to scores across the world.
+                    <br>
+                    Buy now & extend a helping hand to those battered by the ongoing global crisis.
+                </p>
+                <a class="button" href="#">Donate Now</a>
+            </div>
+        </div>
+    </header>
+
+    <section class="content">
+        <div class="donate">
+            <h2>Donate Today</h2>
+            <p>Give to the needy today. The covid-19 pandemic has hit us hard than good and low income-families suffer
+                most. <br>
+                Your gift today can help make a change to their families and their communities. </p>
+
+            <div class="amount">
+                <span>100tk</span>
+                <span class="colortk">200tk</span>
+                <span>500tk</span>
+                <span>1000tk</span>
+                <span>5000tk</span>
+            </div>
+
+            <div class="other-amount">
+                <p style="margin-bottom: 13px;">Other Amount(Taka)</p>
+                <div class="hr"></div>
+            </div>
+
+            <a class="button" href="#">Donate Now</a>
+        </div>
+    </section>
+
+    <section class="content" style="margin-top: 8%;">
+        <h2>Our Donate Plan</h2>
+        <p>Donating to the causes you care about not only benefits the charities themselves, it can be deeply rewarding
+            for you too. <br>
+            Millions of people give to charity on a regular basis to support causes they believe in, as well as for the
+            positive effect it has on their own lives.
+        </p>
+    </section>
+
+    <section class="content">
+        <div class="box-item">
+            <div id="box-1" class="box">
+                <img class="icon-img" src="icon/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>How it works All items and donations to Food For Families go support people who access our emergency
+                    relief centres across Victoria and Tasmania.</p>
+            </div>
+
+            <div id="box-2" class="box">
+                <img class="icon-img" src="icon/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p>Every donation we receive makes an impact on a family fleeing homelessness or abuse, helping them
+                    reclaim their independence and rebuild their lives.</p>
+            </div>
+
+            <div id="box-3" class="box">
+                <img class="icon-img" src="icon/Frame-1.png" alt="">
+                <h3>Education for a child</h3>
+                <p>Educate A Child, a global programme of the Education and UNICEF bring
+                    opportunity through education access and school-based management.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="extra">
+        <div class="half-sec">
+            <h3>We are non profit NGO and charity organization</h3>
+            <img class="location" src="icon/location-icon-png-white-5.jpg" alt="">
+            <p class="location-text">Main branch location: Mirpur-Dhaka-1204</p><br>
+
+            <img class="location" src="icon/location-icon-png-white-5.jpg" alt="">
+            <p class="location-text">Sub branch location: Boalia-Rajshahi-6204</p><br>
+
+            <img class="location" src="icon/location-icon-png-white-5.jpg" alt="">
+            <p class="location-text">Sub branch location: dinajpur-sadar-2346</p>
+        </div>
+
+        <div class="half-sec">
+            <img class="half-img" src="pic/2022-08-23.png" alt="">
+        </div>
+    </section>
+
+    <section class="content" style="margin-top: 8%;">
+        <h2>Get Our Updates</h2>
+        <p>Find out how you can make a difference by supporting local programs this season of giving. Through our impact
+            grant program, <br>
+            RALIANCE strives to give back to local organizations. Policy. Sport. Business. Services: Business, Policy,
+            Sport.</p>
+    </section>
+
+    <section>
+        <div class="input-section">
+            <input id="text" type="text" placeholder="E-mail">
+            <label for="text" class="btn">Subscribe</label>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-item">
+            <h2 style="font-family: 'Lobster Two', cursive; color: rgb(239, 100, 100);">Be Humble</h2>
+            <p style="font-size: 12px;">I'm gonna do it</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
