--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 Your gift today can help make a change to their families and their communities. </p>
 
             <div class="amount">
-                <span>100tk</span>
-                <span class="colortk">200tk</span>
-                <span>500tk</span>
-                <span>1000tk</span>
-                <span>5000tk</span>
+                <a href="#">100tk</a>
+                <a href="#" class="colortk">200tk</a>
+                <a href="#">500tk</a>
+                <a href="#">1000tk</a>
+                <a href="#">5000tk</a>
             </div>
 
             <div class="other-amount">
